# Constrained-Itinerary-Generation

./: .gitignore  Graph.js  README.md  index.css  index.html  index.js  package-lock.json  package.json
client/: index.html
client/js/: app.js
client/style/: style.css
public/: app.css  app.html  app.js
public/styles/: _bicycle.scss  _function.scss  _generate.scss  _header.scss  _listSelectedPaths.scss  _paths.scss  _variables.scss  style.css  style.css.map  style.scss
server/: Algo.cpp  Algo.h  CMakeLists.txt  Cost.cpp  Cost.h  Graph.cpp  Graph.h  Node.cpp  Node.h  index.js  main.cpp  osm_client.cpp  osm_client.h
server/models/: Cost.js  Graph.js  Node.js
server/utils/: MapSimplifier.js  PriorityQueue.js
src/: index.html
